cavalier + clock